src/objects/HachuData__c.object
<CustomObject>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DenpyoKingaku__c</fullName>
        <label>発注税込金額</label>
        <summarizedField>HachuMeisaiData__c.MeisaiZeikomi__c</summarizedField>
        <summaryForeignKey>HachuMeisaiData__c.HachuData__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DenpyoNo__c</fullName>
        <displayFormat>3{0000000}</displayFormat>
        <label>伝票番号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HachuKakuteiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>発注確定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hachubi__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>発注日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HachushoBikoTitle__c</fullName>
        <formula>&quot;備考&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_備考タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoBiko__c</fullName>
        <formula>Biko__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_備考</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoDenpyoNo__c</fullName>
        <formula>&quot;発注No.&quot; +  DenpyoNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_伝票番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoHachubi__c</fullName>
        <formula>TEXT( YEAR( Hachubi__c ) ) + &quot;年&quot; +  LPAD( TEXT( MONTH( Hachubi__c ) ) , 2, &quot; &quot;)  + &quot;月&quot; +  LPAD( TEXT( DAY( Hachubi__c ) ) , 2, &quot; &quot;)  + &quot;日&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_発注日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoHakkobi__c</fullName>
        <formula>&quot;発行日　&quot; + TEXT(YEAR(DATEVALUE(NOW()))) + LPAD(TEXT(MONTH(DATEVALUE(NOW()))), 2,&quot;0&quot;) + &quot;/&quot; + LPAD(TEXT(DAY(DATEVALUE(NOW()))), 2,&quot;0&quot;)</formula>
        <label>￥_発注書_発行日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoIrisuTitle__c</fullName>
        <formula>&quot;入数&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_入数タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoKikakuTitle__c</fullName>
        <formula>&quot;規　　　格&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_規格タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoDenwa__c</fullName>
        <formula>&quot;TEL：0000-11-9876&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_元電話</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoFax__c</fullName>
        <formula>&quot;FAX：0000-11-1234&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_元ＦＡＸ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoJusho1__c</fullName>
        <formula>&quot;〒000-9999　XX県XX市XXX １－１&quot;</formula>
        <label>￥_発注書_元住所１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoJusho2__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_元住所２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoMei1__c</fullName>
        <formula>&quot;株式会社　XXXX&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_元名１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoMei2__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>￥_発注書_元名２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoMotoYubinBango__c</fullName>
        <formula>&quot;〒&quot; + Nohinsaki__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_元郵便番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNoTitle__c</fullName>
        <formula>&quot;No.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_ＮＯタイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiDenwa__c</fullName>
        <formula>&quot;TEL：&quot; + Nohinsaki__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先電話</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiFax__c</fullName>
        <formula>&quot;FAX：&quot; + Nohinsaki__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先ＦＡＸ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiJusho1__c</fullName>
        <formula>Nohinsaki__r.BillingState + Nohinsaki__r.BillingCity + Nohinsaki__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先住所１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiJusho2__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先住所２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiMei1__c</fullName>
        <formula>Nohinsaki__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先名１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiMei2__c</fullName>
        <formula>Nohinsaki__r.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先名２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNohinsakiYubinBango__c</fullName>
        <formula>&quot;〒&quot; +  Nohinsaki__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納品先郵便番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNoki__c</fullName>
        <formula>&quot;納期　&quot; + TEXT( YEAR( NohinYoteibi__c ) ) + &quot;年&quot; +  LPAD( TEXT( MONTH( NohinYoteibi__c ) ) , 2, &quot; &quot;)  + &quot;月&quot; +  LPAD( TEXT( DAY( NohinYoteibi__c ) ) , 2, &quot; &quot;)  + &quot;日&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoNokikaitoTitle__c</fullName>
        <formula>IF ( HachuKakuteiFlg__c ,
 &quot;納品日&quot;,
 &quot;納品希望日&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_納期回答タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShiiresakiCode__c</fullName>
        <formula>Shiiresaki__r.TorihikisakiCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_仕入先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShiiresakiFax__c</fullName>
        <formula>&quot;FAX：&quot; +  Shiiresaki__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_仕入先ＦＡＸ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShiiresakiMei__c</fullName>
        <formula>Shiiresaki__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_仕入先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShohinCodeTitle__c</fullName>
        <formula>&quot;商品ｺｰﾄﾞ&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_商品コードタイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoShohinMeiTitle__c</fullName>
        <formula>&quot;商　品　名&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_商品名タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoSuryoTitle__c</fullName>
        <formula>&quot;数量&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_数量タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoTaniTitle__c</fullName>
        <formula>&quot;単位&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_単位タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoTantoshaMei__c</fullName>
        <formula>&quot;仕入担当：&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_担当者名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachushoTitle__c</fullName>
        <formula>IF ( HachuKakuteiFlg__c ,
 &quot;発注書&quot;,
 &quot;納期確認書&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥_発注書_タイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HatchushoInsatsu__c</fullName>
        <formula>HYPERLINK(&apos;/apex/K01_Hachusho?HdId=&apos; + Id,
IMAGE( &quot;/resource/HatchushoInsatsu&quot; , &quot;発注書印刷&quot; )
)</formula>
        <label>発注書印刷</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeisaiSu__c</fullName>
        <inlineHelpText>K08のトランザクション考慮漏れの一時的な対応。</inlineHelpText>
        <label>￥￥_明細数</label>
        <summaryForeignKey>HachuMeisaiData__c.HachuData__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NohinYoteibi__c</fullName>
        <label>納品予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nohinsaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納品先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HachuData_Nohinsaki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shiiresaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>仕入先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HachuData_Shiiresaki</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>発注データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shiiresaki__c</columns>
        <columns>DenpyoNo__c</columns>
        <columns>HachuKakuteiFlg__c</columns>
        <columns>Nohinsaki__c</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>Hachubi__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>発注-{0000000000}</displayFormat>
        <label>発注番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HachuDataHachuKakuteiFlgRule1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 HachuKakuteiFlg__c,
 OR(
 ISBLANK(Nohinsaki__c),
 ISNULL(Nohinsaki__c)
 )
)</errorConditionFormula>
        <errorDisplayField>Nohinsaki__c</errorDisplayField>
        <errorMessage>発注を確定するには、納品先を選択する必要があります。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HachuDataHachuKakuteiFlgRule2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(HachuKakuteiFlg__c, DenpyoKingaku__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>HachuKakuteiFlg__c</errorDisplayField>
        <errorMessage>発注明細データを１件以上登録し購入価格と発注数量を入力して下さい。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HachuDataHachuKakuteiFlgRule3</fullName>
        <active>true</active>
        <errorConditionFormula>AND( HachuKakuteiFlg__c ,OR(ISNULL( Shiiresaki__c ), ISBLANK(Shiiresaki__c)))</errorConditionFormula>
        <errorDisplayField>Shiiresaki__c</errorDisplayField>
        <errorMessage>発注を確定するには、仕入先の入力が必要です。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HachuDataHachuKakuteiFlgRule4</fullName>
        <active>true</active>
        <description>K08のトランザクション考慮漏れの一時的な対応。</description>
        <errorConditionFormula>MeisaiSu__c  &gt; 10</errorConditionFormula>
        <errorMessage>明細は最大１０件までとしてください。（後日拡張予定。）</errorMessage>
    </validationRules>
</CustomObject>